update realtime api
